[tool.poetry]
name = "holberton"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
typer = "^0.3.2"
mlflow = "^1.12.1"
scikit-learn = "^0.24.0"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
